# cmake_stm32

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32F446RETx_RAM.ld  STM32Toolchain.cmake  cmake_Blajar.ioc  mx.scratch
App/: CMakeLists.txt  libAPP_LIB.a.txt
App/Inc/: app.h
App/Modul/: CMakeLists.txt
App/Src/: CMakeLists.txt  app.c
Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
Inc/: main.h  stm32f4xx_hal_conf.h
Inc/Backup/: stm32f4xx_hal_conf.h.bak
Src/: CMakeLists.txt  main.c
Src/Backup/: gpio.c.bak  main.c.bak
startup/: CMakeLists.txt
